--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: production
     
     steps:
     - name: Checkout code
@@ -17,7 +16,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'npm'
         
     - name: Install dependencies
@@ -62,19 +61,14 @@ jobs:
         cd infra/
         echo "cloudfront_url=$(terraform output -raw cloudfront_url)" >> $GITHUB_OUTPUT
         
-    - name: Comment PR with deployment URL
-      if: github.event_name == 'pull_request'
-      uses: actions/github-script@v7
-      with:
-        script: |
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: '🚀 Déployé avec succès!\n\n**URL:** ${{ steps.get-url.outputs.cloudfront_url }}'
-          })
-          
-    - name: Invalidate CloudFront
+    - name: Invalidate CloudFront Cache
       run: |
-        DISTRIBUTION_ID=$(cd infra && terraform output -raw cloudfront_distribution_id)
+        cd infra/
+        DISTRIBUTION_ID=$(terraform output -raw cloudfront_distribution_id)
         aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
+        
+    - name: Display deployment info
+      run: |
+        echo "Deployment ok"
+        echo "CloudFront : ${{ steps.get-url.outputs.cloudfront_url }}"
+  
